--- a/scripts/install
+++ b/scripts/install
@@ -26,7 +26,7 @@ ynh_script_progression --message="Installing LibreTranslate..." --weight=2
 pushd $install_dir
 	python3 -m venv $install_dir/venv
 	source $install_dir/venv/bin/activate
-	ynh_exec_warn_less pip install libretranslate==$libretranslate_version
+	ynh_exec_warn_less pip install libretranslate==$libretranslate_version toml
 popd
 
 
