--- a/scripts/install
+++ b/scripts/install
@@ -28,12 +28,20 @@ pushd $install_dir
 	source $install_dir/venv/bin/activate
 	ynh_exec_warn_less pip install libretranslate=="$(ynh_app_upstream_version)" toml
         
-        # Install additional languages (FIXME!!!)
-        venv/bin/libretranslate --update-models &
-        export LT-PID="$!"
-        if [ ss -tulpen | grep '127.0.0.1:5000' ] ; then
-            kill -INT "$!"
-        fi
+	# WARNING!!! CODE BELOW WASN'T TESTED!!! RUN IN DEBUG MODE FROM SHELL!!!
+        # Checking if additional_languages was enabled...
+	if [ "$additional_languages" = true ] ; then
+
+	    # ...if yes, download models...
+            venv/bin/libretranslate --update-models &
+
+	    # ...and then kill the libretranslate process 
+	    # because it was started after downloading models!
+	    export LT-PID="$!"
+            if ss -tulpen | grep '127.0.0.1:5000' ; then
+                kill -INT "$LT_PID"
+            fi
+	fi
 popd
 
 #=================================================
