--- a/scripts/install
+++ b/scripts/install
@@ -4,14 +4,6 @@ source _common.sh
 source /usr/share/yunohost/helpers
 
 #=================================================
-# DOWNLOAD, CHECK AND UNPACK SOURCE
-#=================================================
-ynh_script_progression "Setting up source files..."
-
-#REMOVEME? Assuming the install dir is setup using ynh_setup_source, the proper chmod/chowns are now already applied and it shouldn't be necessary to tweak perms | chmod 750 "$install_dir"
-#REMOVEME? Assuming the install dir is setup using ynh_setup_source, the proper chmod/chowns are now already applied and it shouldn't be necessary to tweak perms | chmod -R o-rwx "$install_dir"
-#REMOVEME? Assuming the install dir is setup using ynh_setup_source, the proper chmod/chowns are now already applied and it shouldn't be necessary to tweak perms | chown -R $app:www-data "$install_dir"
-#=================================================
 # SPECIFIC SETUP
 #=================================================
 ynh_script_progression "Installing LibreTranslate..."
@@ -35,6 +27,7 @@ ynh_config_add_systemd
 
 # Use logrotate to manage application logfile(s)
 ynh_config_add_logrotate
+touch /var/log/$app/$app.log
 
 yunohost service add $app --description="Machine Translation API" --log="/var/log/$app/$app.log"
 
