--- a/scripts/install
+++ b/scripts/install
@@ -8,11 +8,7 @@ source /usr/share/yunohost/helpers
 #=================================================
 ynh_script_progression "Installing LibreTranslate..."
 
-pushd $install_dir
-	python3 -m venv $install_dir/venv
-	source $install_dir/venv/bin/activate
-	ynh_hide_warnings pip install libretranslate=="$(ynh_app_upstream_version)" toml
-popd
+install_via_venv
 
 #=================================================
 # SYSTEM CONFIGURATION
@@ -24,12 +20,11 @@ ynh_config_add_nginx
 
 # Create a dedicated systemd config
 ynh_config_add_systemd
+yunohost service add "$app" --description="Machine Translation API" --log="/var/log/$app/$app.log"
 
 # Use logrotate to manage application logfile(s)
 ynh_config_add_logrotate
-touch /var/log/$app/$app.log
-
-yunohost service add $app --description="Machine Translation API" --log="/var/log/$app/$app.log"
+touch "/var/log/$app/$app.log"
 
 #=================================================
 # START SYSTEMD SERVICE
@@ -37,7 +32,7 @@ yunohost service add $app --description="Machine Translation API" --log="/var/lo
 ynh_script_progression "Starting $app's systemd service..."
 
 # Start a systemd service
-ynh_systemctl --service=$app --action="start"
+ynh_systemctl --service="$app" --action="start"
 
 #=================================================
 # END OF SCRIPT
