--- a/scripts/install
+++ b/scripts/install
@@ -4,11 +4,31 @@ source _common.sh
 source /usr/share/yunohost/helpers
 
 #=================================================
-# SPECIFIC SETUP
+# DOWNLOAD, CHECK AND UNPACK SOURCE
 #=================================================
 ynh_script_progression "Setting up source files..."
 
-install_via_venv
+ynh_setup_source --dest_dir="$install_dir"
+
+#=================================================
+# APP INITIAL CONFIGURATION
+#=================================================
+ynh_script_progression "Adding $app's configuration files..."
+
+ynh_config_add --template=".env" --destination="$install_dir/.env"
+
+#=================================================
+# INSTALL APP DEPENDENCIES
+#=================================================
+ynh_script_progression "Installing $app dependencies..."
+
+pushd $install_dir
+	ynh_exec_as_app python3 -m venv "$install_dir/venv"
+	ynh_hide_warnings ynh_exec_as_app "$install_dir/venv/bin/pip" install --upgrade pip gunicorn
+	ynh_hide_warnings ynh_exec_as_app "$install_dir/venv/bin/pip" install "$install_dir/" --no-cache-dir
+    
+    ynh_safe_rm "$install_dir/.cache/pip"
+popd
 
 #=================================================
 # SYSTEM CONFIGURATION
