--- a/scripts/install
+++ b/scripts/install
@@ -32,6 +32,15 @@ ynh_script_progression "Installing $app dependencies..."
 pushd $install_dir
 	ynh_exec_as_app python3 -m venv "$install_dir/venv"
 	ynh_hide_warnings ynh_exec_as_app "$install_dir/venv/bin/pip" install --upgrade pip gunicorn
+	
+	if [ $cuda = cuda ]
+	ynh_hide_warnings ynh_exec_as_app "$install_dir/venv/bin/pip" install --no-cache-dir torch==1.12.0+cu116 -f https://download.pytorch.org/whl/torch_stable.html
+
+	else  
+	ynh_hide_warnings ynh_exec_as_app "$install_dir/venv/bin/pip" install --no-cache-dir torch==2.2.0 --extra-index-url https://download.pytorch.org/whl/cpu
+	ynh_hide_warnings ynh_exec_as_app "$install_dir/venv/bin/pip" install --no-cache-dir "numpy<2"
+	fi
+	
 	ynh_hide_warnings ynh_exec_as_app "$install_dir/venv/bin/pip" install "$install_dir/" --no-cache-dir
     
     ynh_safe_rm "$install_dir/.cache/pip"
