--- a/scripts/install
+++ b/scripts/install
@@ -33,7 +33,7 @@ pushd $install_dir
 	ynh_exec_as_app python3 -m venv "$install_dir/venv"
 	ynh_hide_warnings ynh_exec_as_app "$install_dir/venv/bin/pip" install --upgrade pip gunicorn
 	
-	if [ $cuda = cuda ]
+	if [ "$cuda" = "cuda" ]; then
 	ynh_hide_warnings ynh_exec_as_app "$install_dir/venv/bin/pip" install --no-cache-dir torch==1.12.0+cu116 -f https://download.pytorch.org/whl/torch_stable.html
 
 	else  
