fix torch version

--- a/scripts/install
+++ b/scripts/install
@@ -34,7 +34,7 @@ pushd $install_dir
 	ynh_hide_warnings ynh_exec_as_app "$install_dir/venv/bin/pip" install --upgrade pip gunicorn
 	
 	if [ "$cuda" = "cuda" ]; then
-	ynh_hide_warnings ynh_exec_as_app "$install_dir/venv/bin/pip" install --no-cache-dir torch==1.12.0+cu116 -f https://download.pytorch.org/whl/torch_stable.html
+	ynh_hide_warnings ynh_exec_as_app "$install_dir/venv/bin/pip" install --no-cache-dir torch==2.2.0 -f https://download.pytorch.org/whl/torch_stable.html
 
 	else  
 	ynh_hide_warnings ynh_exec_as_app "$install_dir/venv/bin/pip" install --no-cache-dir torch==2.2.0 --extra-index-url https://download.pytorch.org/whl/cpu
