--- a/scripts/install
+++ b/scripts/install
@@ -29,7 +29,7 @@ ynh_config_add --template=".env" --destination="$install_dir/.env"
 #=================================================
 ynh_script_progression "Installing $app dependencies..."
 
-pushd $install_dir
+pushd "$install_dir"
 	ynh_exec_as_app python3 -m venv "$install_dir/venv"
 	ynh_hide_warnings ynh_exec_as_app "$install_dir/venv/bin/pip" install --upgrade pip gunicorn
 	
@@ -39,12 +39,16 @@ pushd $install_dir
 	else  
 	ynh_hide_warnings ynh_exec_as_app "$install_dir/venv/bin/pip" install --no-cache-dir torch==2.2.0 --extra-index-url https://download.pytorch.org/whl/cpu
 	ynh_hide_warnings ynh_exec_as_app "$install_dir/venv/bin/pip" install --no-cache-dir "numpy<2"
-	
+
 	fi
 	
 	ynh_hide_warnings ynh_exec_as_app "$install_dir/venv/bin/pip" install "$install_dir/" --no-cache-dir
     
     ynh_safe_rm "$install_dir/.cache/pip"
+popd
+
+pushd "$install_dir"
+	ynh_hide_warnings ynh_exec_as_app "$install_dir"/venv/bin/libretranslate --update-models
 popd
 
 #=================================================
