--- a/scripts/install
+++ b/scripts/install
@@ -48,7 +48,8 @@ pushd "$install_dir"
 popd
 
 pushd "$install_dir"
-	ynh_hide_warnings ynh_exec_as_app "$install_dir"/venv/bin/libretranslate --update-models --load_only "$used_languages"
+	export LOAD_ONLY=$used_languages
+	ynh_hide_warnings ynh_exec_as_app "$install_dir"/venv/bin/libretranslate --update-models
 popd
 
 #=================================================
