remove unneeded files

--- a/scripts/install
+++ b/scripts/install
@@ -42,15 +42,23 @@ pushd "$install_dir"
 
 	fi
 	
-	ynh_hide_warnings ynh_exec_as_app "$install_dir/venv/bin/pip" install "$install_dir/" --no-cache-dir
-    
-    ynh_safe_rm "$install_dir/.cache/pip"
+	ynh_hide_warnings ynh_exec_as_app "$install_dir/venv/bin/pip" install "$install_dir/" --no-cache-dir 
 popd
 
-#pushd "$install_dir"
-#	export LOAD_ONLY=$used_languages
-#	ynh_hide_warnings ynh_exec_as_app "$install_dir"/venv/bin/libretranslate --update-models
-#popd
+# Remove unneeded files
+
+pushd "$install_dir"
+	ynh_safe_rm "$install_dir/.cache/pip"
+	ynh_safe_rm "$install_dir/docker"
+	ynh_safe_rm "$install_dir/docker-compose.cuda.yml"
+	ynh_safe_rm "$install_dir/docker-compose.yml"
+	ynh_safe_rm "$install_dir/.dockerignore"
+	ynh_safe_rm "$install_dir/docs"
+	ynh_safe_rm "$install_dir/.env.save"
+	ynh_safe_rm "$install_dir/k8s.yaml"
+	ynh_safe_rm "$install_dir/.pre-commit-config.yaml"
+	ynh_safe_rm "$install_dir/scripts"
+popd
 
 #=================================================
 # SYSTEM CONFIGURATION
