--- a/doc/PRE_UPGRADE.d/1.7.2~ynh2.md
+++ b/doc/PRE_UPGRADE.d/1.7.2~ynh2.md
@@ -11,7 +11,7 @@ Note: this upgrade will install the CPU version. You’ll be able to change the 
 
 I’ve tried to keep your current models installed (they are now in __DATA_DIR__/models) but be sure to double-check after this upgrade (and if needed, you can now download the models directly via the webadmin).
 
-API-keys are normally kept after this upgrade.
+API-keys are normally kept after this upgrade if their database is located in __INSTALL_DIR__/db/(usually api_keys.db).
 
 I hope you’ll enjoy it!
 
