addition to the docs

--- a/doc/PRE_UPGRADE.d/1.7.2~ynh2.md
+++ b/doc/PRE_UPGRADE.d/1.7.2~ynh2.md
@@ -8,6 +8,7 @@ News:
 Note: this upgrade will install the CPU version. You’ll be able to change the version in the new config panel (see below) if you wish (you then have to force upgrade the app for this to take effect).
 - A new environment file: all settings are now in `__INSTALL_DIR__/.env` so you don’t have to adapt `libretranslate.service` for each change anymore. All possible variables are written inside so you have more control of your installation.
 - A new config_panel (accessible at `yunohost/admin/#/apps/libretranslate/_core/`) where you can easily change some settings (such as which language to install) without going to the CLI.
+- You can now install LibreTranslate on a subpath of the domain (e.g. domain.tld/translate)
 
 I’ve tried to keep your current models installed (they are now in __DATA_DIR__/models) but be sure to double-check after this upgrade (and if needed, you can now download the models directly via the webadmin).
 
