more precise info

--- a/doc/PRE_UPGRADE.d/1.7.2~ynh2.md
+++ b/doc/PRE_UPGRADE.d/1.7.2~ynh2.md
@@ -10,9 +10,11 @@ Note: this upgrade will install the CPU version. You’ll be able to change the 
 - A new config_panel (accessible at `yunohost/admin/#/apps/libretranslate/_core/`) where you can easily change some settings (such as which language to install) without going to the CLI.
 - You can now install LibreTranslate on a subpath of the domain (e.g. domain.tld/translate)
 
-Unfortunately, you’ll have to redownload all the models you need (but now you can do this via the webadmin)
+❗
+Unfortunately, you’ll have to redownload all the models you need (but now you can do this via the webadmin). Only `en` and `fr` will be available.
+❗
 
-API-keys are normally kept after this upgrade if their database is located in __INSTALL_DIR__/db/(usually api_keys.db).
+API-keys are normally kept after this upgrade if their database is located in `__INSTALL_DIR__/db/`(usually api_keys.db).
 
 I hope you’ll enjoy it!
 
