--- a/scripts/install
+++ b/scripts/install
@@ -66,7 +66,7 @@ ynh_script_progression "Installing $app dependencies..."
 
 pushd $install_dir
 	ynh_exec_as_app python3 -m venv "$install_dir/venv"
-	ynh_hide_warnings ynh_exec_as_app "$install_dir/venv/bin/pip" install --upgrade pip gunicorn setuptools sentencepiece
+	ynh_hide_warnings ynh_exec_as_app "$install_dir/venv/bin/pip" install --upgrade pip gunicorn setuptools wheel
 	ynh_hide_warnings ynh_exec_as_app "$install_dir/venv/bin/pip" install Babel==2.12.1 && ynh_hide_warnings ynh_exec_as_app "$install_dir/venv/bin/python" "$install_dir"/scripts/compile_locales.py
 	
 	if [ "$cuda" = "cuda" ]; then
